
mlUnit 1.8.0 (in development)
-----------------------------

  - assert_exist_dir checks for existence of a directory.
  - assert_contains checks if a search string can be found in a text.
  - mlunit_tempdir creates a temporary directory, optionally copies content,
    then removes the directory automatically, after the test's tear_down.
    This should help with some integration tests.

  - mlUnit parameter catch_output catches console output that occurs during
    tests (and test-level fixtures), and includes it in the jUnit report.
  - Execution time is now given for each test case in the jUnit report.
  - Compatibility with MATLAB R2018b.
  - Compatibility with MATLAB R2007b. Scrapped R2006b support.
  - Console output now produces space above new items, instead of below them.

  - Fix: Guard mlUnit parameters against `clear` being called in user's
    code provided in the Ant script's `additional.cmd` property.
  - Fix: If warnings are included in caught test output, their hilight markers
    (making the text orange in MATLAB) are deleted, because they are
    incompatible with XML.


mlUnit 1.7.0 (2018-11-21)
-------------------------

  - assert_exist_file checks for existence of a file.
  - Let recursive_test_run/run_suite_collection fail on test failures, if so
    desired. This simplifies automation, as we do not rely on specific console
    output from recursive_test_run anymore.
  - Reduce assert_equals diagnostic output to a fixed length of about 80
    characters, and also omit up to about 20 characters to the first real
    difference.
  - Improved execution time when using assert_equals on very large cell arrays.
    Very large cell arrays will take printable() a long time to prepare.
    Optimization dropped execution speed for one example from about 40s to
    about 8s on R2007b.
  - Provide release agnostic nargchk/narginchk replacement.

  - Fix: Out of memory when using assert_equals on very large cell arrays, or