@@ -22,15 +22,21 @@ errmessages = mlunit_strjoin(msg_and_stack_list, sprintf('\n'));
 
 has_errors = ~isempty(errmessages);
 has_failed = ~isempty(result.failure);
-
-if has_errors
-    self.num_errors = self.num_errors + 1;
-    add_to_errorlist(self, 'ERROR', result.name, errmessages);
-end
+has_skipped = ~isempty(result.skipped);
 
 if has_failed
     self.num_failures = self.num_failures + 1;
     add_to_errorlist(self, 'FAIL', result.name, result.failure);
+end
+
+if has_skipped
+    self.num_skipped = self.num_skipped + 1;
+    add_to_errorlist(self, 'SKIPPED', result.name, result.skipped);
+end
+
+if has_errors
+    self.num_errors = self.num_errors + 1;
+    add_to_errorlist(self, 'ERROR', result.name, errmessages);
 end
 
 if mlunit_param('verbose') && ~has_errors && ~has_failed
