@@ -50,4 +50,5 @@ function texts(self)
 
     set(self.text_runs, 'String', ['Runs: ', num2str(self.num_results), ...
         ' / Errors: ', num2str(self.num_errors), ...
-        ' / Failures: ', num2str(self.num_failures)]);
+        ' / Failures: ', num2str(self.num_failures), ...
+        ' / Skipped: ', num2str(self.num_skipped)]);
