@@ -1,0 +1,3 @@
+function self = test_method(self)
+
+% pass
