@@ -1,0 +1,3 @@
+function self = test_method_with_msg(self)
+
+mlunit_skip('Substantiated skip');
